src/org/mar9000/salt/grammar/SaltParser.java
// Generated from src/org/mar9000/salt/grammar/Salt.g4 by ANTLR 4.4
package org.mar9000.salt.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SaltParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__8=1, T__7=2, T__6=3, T__5=4, T__4=5, T__3=6, T__2=7, T__1=8, T__0=9, 
		OPEN=10, OPEN_EMPTY=11, OPEN_BOTH=12, OPEN_VERTICAL=13, OPEN_HORIZONTAL=14, 
		OPEN_EXTERNAL=15, OPEN_MENU=16, OPEN_TAB=17, SELECTED_TAB=18, CLOSE=19, 
		COLUMN_SEPARATOR=20, NL=21, CHAR=22, SPECIAL_CHAR=23, DIGIT=24, SP=25;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'[]'", "'^'", "'.'", "'()'", "'['", "'[X]'", "'\"'", 
		"'(X)'", "OPEN", "'{'", "'{#'", "'{!'", "'{-'", "'{+'", "'{*'", "'{/'", 
		"'<b>'", "'}'", "'|'", "NL", "CHAR", "SPECIAL_CHAR", "DIGIT", "SP"
	};
	public static final int
		RULE_document = 0, RULE_group = 1, RULE_row = 2, RULE_cell = 3, RULE_menuBar = 4, 
		RULE_menu = 5, RULE_tabBar = 6, RULE_tab = 7, RULE_emptyCell = 8, RULE_cellContent = 9, 
		RULE_button = 10, RULE_radioChecked = 11, RULE_radioUnchecked = 12, RULE_checkedBox = 13, 
		RULE_uncheckedBox = 14, RULE_dropList = 15, RULE_string = 16, RULE_text = 17, 
		RULE_blanks = 18;
	public static final String[] ruleNames = {
		"document", "group", "row", "cell", "menuBar", "menu", "tabBar", "tab", 
		"emptyCell", "cellContent", "button", "radioChecked", "radioUnchecked", 
		"checkedBox", "uncheckedBox", "dropList", "string", "text", "blanks"
	};

	@Override
	public String getGrammarFileName() { return "Salt.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SaltParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public List<BlanksContext> blanks() {
			return getRuleContexts(BlanksContext.class);
		}
		public BlanksContext blanks(int i) {
			return getRuleContext(BlanksContext.class,i);
		}
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); blanks();
			setState(39); group();
			setState(40); blanks();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(SaltParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(SaltParser.NL, i);
		}
		public BlanksContext blanks() {
			return getRuleContext(BlanksContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(SaltParser.CLOSE, 0); }
		public TerminalNode OPEN() { return getToken(SaltParser.OPEN, 0); }
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public GroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GroupContext group() throws RecognitionException {
		GroupContext _localctx = new GroupContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_group);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(OPEN);
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(43); row();
					setState(44); match(NL);
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(52);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(51); row();
				}
				break;
			}
			setState(54); blanks();
			setState(55); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowContext extends ParserRuleContext {
		public CellContext cell(int i) {
			return getRuleContext(CellContext.class,i);
		}
		public BlanksContext blanks() {
			return getRuleContext(BlanksContext.class,0);
		}
		public TerminalNode COLUMN_SEPARATOR(int i) {
			return getToken(SaltParser.COLUMN_SEPARATOR, i);
		}
		public List<CellContext> cell() {
			return getRuleContexts(CellContext.class);
		}
		public List<TerminalNode> COLUMN_SEPARATOR() { return getTokens(SaltParser.COLUMN_SEPARATOR); }
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitRow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitRow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_row);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); blanks();
			setState(58); cell();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLUMN_SEPARATOR) {
				{
				{
				setState(59); match(COLUMN_SEPARATOR);
				setState(60); cell();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CellContext extends ParserRuleContext {
		public List<TerminalNode> SP() { return getTokens(SaltParser.SP); }
		public EmptyCellContext emptyCell() {
			return getRuleContext(EmptyCellContext.class,0);
		}
		public CellContentContext cellContent() {
			return getRuleContext(CellContentContext.class,0);
		}
		public MenuBarContext menuBar() {
			return getRuleContext(MenuBarContext.class,0);
		}
		public TerminalNode SP(int i) {
			return getToken(SaltParser.SP, i);
		}
		public TabBarContext tabBar() {
			return getRuleContext(TabBarContext.class,0);
		}
		public GroupContext group() {
			return getRuleContext(GroupContext.class,0);
		}
		public CellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cell; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterCell(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitCell(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitCell(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CellContext cell() throws RecognitionException {
		CellContext _localctx = new CellContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cell);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SP) {
				{
				{
				setState(66); match(SP);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			switch (_input.LA(1)) {
			case T__7:
			case T__6:
			case T__4:
			case T__3:
			case T__2:
			case T__1:
			case T__0:
			case CHAR:
			case SPECIAL_CHAR:
			case DIGIT:
				{
				setState(72); cellContent();
				}
				break;
			case OPEN:
				{
				setState(73); group();
				}
				break;
			case T__5:
				{
				setState(74); emptyCell();
				}
				break;
			case OPEN_MENU:
				{
				setState(75); menuBar();
				}
				break;
			case OPEN_TAB:
				{
				setState(76); tabBar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(82);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(79); match(SP);
					}
					} 
				}
				setState(84);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MenuBarContext extends ParserRuleContext {
		public TerminalNode OPEN_MENU() { return getToken(SaltParser.OPEN_MENU, 0); }
		public TerminalNode CLOSE() { return getToken(SaltParser.CLOSE, 0); }
		public TerminalNode COLUMN_SEPARATOR(int i) {
			return getToken(SaltParser.COLUMN_SEPARATOR, i);
		}
		public List<MenuContext> menu() {
			return getRuleContexts(MenuContext.class);
		}
		public MenuContext menu(int i) {
			return getRuleContext(MenuContext.class,i);
		}
		public List<TerminalNode> COLUMN_SEPARATOR() { return getTokens(SaltParser.COLUMN_SEPARATOR); }
		public MenuBarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_menuBar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterMenuBar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitMenuBar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitMenuBar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MenuBarContext menuBar() throws RecognitionException {
		MenuBarContext _localctx = new MenuBarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_menuBar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); match(OPEN_MENU);
			setState(86); menu();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLUMN_SEPARATOR) {
				{
				{
				setState(87); match(COLUMN_SEPARATOR);
				setState(88); menu();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MenuContext extends ParserRuleContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public List<TerminalNode> SP() { return getTokens(SaltParser.SP); }
		public TerminalNode SP(int i) {
			return getToken(SaltParser.SP, i);
		}
		public MenuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_menu; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterMenu(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitMenu(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitMenu(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MenuContext menu() throws RecognitionException {
		MenuContext _localctx = new MenuContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_menu);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SP) {
				{
				{
				setState(96); match(SP);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102); text();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SP) {
				{
				{
				setState(103); match(SP);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TabBarContext extends ParserRuleContext {
		public TerminalNode CLOSE() { return getToken(SaltParser.CLOSE, 0); }
		public TerminalNode COLUMN_SEPARATOR(int i) {
			return getToken(SaltParser.COLUMN_SEPARATOR, i);
		}
		public List<TabContext> tab() {
			return getRuleContexts(TabContext.class);
		}
		public TabContext tab(int i) {
			return getRuleContext(TabContext.class,i);
		}
		public TerminalNode OPEN_TAB() { return getToken(SaltParser.OPEN_TAB, 0); }
		public List<TerminalNode> COLUMN_SEPARATOR() { return getTokens(SaltParser.COLUMN_SEPARATOR); }
		public TabBarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tabBar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterTabBar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitTabBar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitTabBar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TabBarContext tabBar() throws RecognitionException {
		TabBarContext _localctx = new TabBarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tabBar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); match(OPEN_TAB);
			setState(110); tab();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLUMN_SEPARATOR) {
				{
				{
				setState(111); match(COLUMN_SEPARATOR);
				setState(112); tab();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118); match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TabContext extends ParserRuleContext {
		public TerminalNode SELECTED_TAB() { return getToken(SaltParser.SELECTED_TAB, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public List<TerminalNode> SP() { return getTokens(SaltParser.SP); }
		public TerminalNode SP(int i) {
			return getToken(SaltParser.SP, i);
		}
		public TabContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tab; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterTab(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitTab(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitTab(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TabContext tab() throws RecognitionException {
		TabContext _localctx = new TabContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tab);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SP) {
				{
				{
				setState(120); match(SP);
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			_la = _input.LA(1);
			if (_la==SELECTED_TAB) {
				{
				setState(126); match(SELECTED_TAB);
				}
			}

			setState(129); text();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SP) {
				{
				{
				setState(130); match(SP);
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptyCellContext extends ParserRuleContext {
		public EmptyCellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyCell; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterEmptyCell(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitEmptyCell(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitEmptyCell(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmptyCellContext emptyCell() throws RecognitionException {
		EmptyCellContext _localctx = new EmptyCellContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_emptyCell);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CellContentContext extends ParserRuleContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public RadioUncheckedContext radioUnchecked() {
			return getRuleContext(RadioUncheckedContext.class,0);
		}
		public DropListContext dropList() {
			return getRuleContext(DropListContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public UncheckedBoxContext uncheckedBox() {
			return getRuleContext(UncheckedBoxContext.class,0);
		}
		public ButtonContext button() {
			return getRuleContext(ButtonContext.class,0);
		}
		public CheckedBoxContext checkedBox() {
			return getRuleContext(CheckedBoxContext.class,0);
		}
		public RadioCheckedContext radioChecked() {
			return getRuleContext(RadioCheckedContext.class,0);
		}
		public CellContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cellContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterCellContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitCellContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitCellContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CellContentContext cellContent() throws RecognitionException {
		CellContentContext _localctx = new CellContentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cellContent);
		try {
			setState(146);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(138); button();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(139); radioChecked();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(140); radioUnchecked();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 4);
				{
				setState(141); checkedBox();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(142); uncheckedBox();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 6);
				{
				setState(143); dropList();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 7);
				{
				setState(144); string();
				}
				break;
			case CHAR:
			case SPECIAL_CHAR:
			case DIGIT:
				enterOuterAlt(_localctx, 8);
				{
				setState(145); text();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ButtonContext extends ParserRuleContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public List<TerminalNode> SP() { return getTokens(SaltParser.SP); }
		public TerminalNode SP(int i) {
			return getToken(SaltParser.SP, i);
		}
		public ButtonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_button; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterButton(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitButton(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitButton(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ButtonContext button() throws RecognitionException {
		ButtonContext _localctx = new ButtonContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_button);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148); match(T__3);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SP) {
				{
				{
				setState(149); match(SP);
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155); text();
			setState(156); match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RadioCheckedContext extends ParserRuleContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public List<TerminalNode> SP() { return getTokens(SaltParser.SP); }
		public TerminalNode SP(int i) {
			return getToken(SaltParser.SP, i);
		}
		public RadioCheckedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_radioChecked; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterRadioChecked(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitRadioChecked(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitRadioChecked(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RadioCheckedContext radioChecked() throws RecognitionException {
		RadioCheckedContext _localctx = new RadioCheckedContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_radioChecked);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158); match(T__0);
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SP) {
				{
				{
				setState(159); match(SP);
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165); text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RadioUncheckedContext extends ParserRuleContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public List<TerminalNode> SP() { return getTokens(SaltParser.SP); }
		public TerminalNode SP(int i) {
			return getToken(SaltParser.SP, i);
		}
		public RadioUncheckedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_radioUnchecked; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).enterRadioUnchecked(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SaltListener ) ((SaltListener)listener).exitRadioUnchecked(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SaltVisitor ) return ((SaltVisitor<? extends T>)visitor).visitRadioUnchecked(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RadioUncheckedContext radioUnchecked() throws RecognitionException {
		RadioUncheckedContext _localctx = new RadioUncheckedContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_radioUnchecked);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167); match(T__4);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SP) {
				{
				{
				setState(168); match(SP);
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174); text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
